# ChangeLog for sys-kernel/git-sources
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.119 2007/11/13 15:02:14 mpagano Exp $

*git-sources-2.6.24_rc2-r3 (13 Nov 2007)

  13 Nov 2007; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.24_rc2-r3.ebuild:
  Version bump.

  11 Nov 2007; Michael Pagano <mpagano@gentoo.org> ChangeLog:
  New version bump. Old versions dump

  09 Nov 2007; Mike Pagano <mpagano@gentoo.org>
  -git-sources-2.6.23-r2.ebuild, -git-sources-2.6.23-r4.ebuild,
  -git-sources-2.6.23-r7.ebuild, -git-sources-2.6.23-r8.ebuild,
  -git-sources-2.6.23-r9.ebuild, -git-sources-2.6.23-r13.ebuild,
  -git-sources-2.6.23-r17.ebuild:
  Removing old versions.

*git-sources-2.6.24_rc1-r15 (06 Nov 2007)

  06 Nov 2007; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.24_rc1-r15.ebuild:
  Version bump: Linux 2.6.24-rc1-r15

*git-sources-2.6.24_rc1-r10 (01 Nov 2007)

  01 Nov 2007; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.24_rc1-r10.ebuild:
  Linux 2.6.24-rc1-r10

*git-sources-2.6.24_rc1-r7 (30 Oct 2007)

  30 Oct 2007; Christian Heim <phreak@gentoo.org>
  +git-sources-2.6.24_rc1-r7.ebuild:
  Linux 2.6.24-rc1-r7.

*git-sources-2.6.24_rc1-r4 (28 Oct 2007)

  28 Oct 2007; Christian Heim <phreak@gentoo.org>
  +git-sources-2.6.24_rc1-r4.ebuild:
  Linux 2.6.24_rc1-git4.

*git-sources-2.6.24_rc1-r1 (26 Oct 2007)

  26 Oct 2007; Christian Heim <phreak@gentoo.org>
  +git-sources-2.6.24_rc1-r1.ebuild:
  First git-snapshot for Linux 2.6.24-rc1.

*git-sources-2.6.23-r4 (13 Oct 2007)

  13 Oct 2007; Mike Pagano <mpagano@gentoo.org>
  -git-sources-2.6.23_rc1-r6.ebuild, -git-sources-2.6.23_rc3.ebuild,
  -git-sources-2.6.23_rc4-r2.ebuild, -git-sources-2.6.23_rc5.ebuild,
  -git-sources-2.6.23_rc6-r4.ebuild, -git-sources-2.6.23_rc7-r5.ebuild,
  -git-sources-2.6.23_rc8-r2.ebuild, +git-sources-2.6.23-r4.ebuild:
  Version bump and remove old versions.
