@@ -5,26 +5,26 @@ DIST patch-2.6.24-rc1.bz2 8966500 RMD160 7780e99ff65e745c2c720f99b517aedf9ca0234
 DIST patch-2.6.24-rc2-git1.bz2 101788 RMD160 5d70fa1cc521dbe086c7ecde560e8792388f095d SHA1 c7d2bd4e89eea5d2569d667d0e3b22cacfa19d6b SHA256 498f9c00e8c3ad915dc39203656ebfa652a62fd07948821da0c6e3f1ad7d06b5
 DIST patch-2.6.24-rc2-git3.bz2 145167 RMD160 fa0a67aadbf86b22b7588a556e3c48e1bd6d8e88 SHA1 313514808714f49265f184dcef2391f2ead085ea SHA256 ae3ee322e1479cf0ae2881cd6ca34c745ebc7938673e0212bfd69c5ba07bc4eb
 DIST patch-2.6.24-rc2.bz2 9161681 RMD160 738119066eb1b91ac6e4db299dd81e469412f019 SHA1 b9a44371004907b87f17d8db52afb17a22669f96 SHA256 c316760b5489af874cfc0fdba4b0d9aacf597abeb94a871a6fbaf9876b7e4fd6
-EBUILD git-sources-2.6.24_rc1-r10.ebuild 1117 RMD160 d3a7ed4c50283f493004ee4831dbbd1e7925e80e SHA1 b724fa7d0a3ef2aef6d7b60c52d730d4c1559c11 SHA256 75d4363c1f4b3dc653ae1b18663459dfd4a10d5c5a723fc984765fd4dd3b00d1
-MD5 5390336076be0bcb2731adf149f22ace git-sources-2.6.24_rc1-r10.ebuild 1117
-RMD160 d3a7ed4c50283f493004ee4831dbbd1e7925e80e git-sources-2.6.24_rc1-r10.ebuild 1117
-SHA256 75d4363c1f4b3dc653ae1b18663459dfd4a10d5c5a723fc984765fd4dd3b00d1 git-sources-2.6.24_rc1-r10.ebuild 1117
-EBUILD git-sources-2.6.24_rc1-r15.ebuild 1117 RMD160 d3a7ed4c50283f493004ee4831dbbd1e7925e80e SHA1 b724fa7d0a3ef2aef6d7b60c52d730d4c1559c11 SHA256 75d4363c1f4b3dc653ae1b18663459dfd4a10d5c5a723fc984765fd4dd3b00d1
-MD5 5390336076be0bcb2731adf149f22ace git-sources-2.6.24_rc1-r15.ebuild 1117
-RMD160 d3a7ed4c50283f493004ee4831dbbd1e7925e80e git-sources-2.6.24_rc1-r15.ebuild 1117
-SHA256 75d4363c1f4b3dc653ae1b18663459dfd4a10d5c5a723fc984765fd4dd3b00d1 git-sources-2.6.24_rc1-r15.ebuild 1117
-EBUILD git-sources-2.6.24_rc2-r1.ebuild 1117 RMD160 d3a7ed4c50283f493004ee4831dbbd1e7925e80e SHA1 b724fa7d0a3ef2aef6d7b60c52d730d4c1559c11 SHA256 75d4363c1f4b3dc653ae1b18663459dfd4a10d5c5a723fc984765fd4dd3b00d1
-MD5 5390336076be0bcb2731adf149f22ace git-sources-2.6.24_rc2-r1.ebuild 1117
-RMD160 d3a7ed4c50283f493004ee4831dbbd1e7925e80e git-sources-2.6.24_rc2-r1.ebuild 1117
-SHA256 75d4363c1f4b3dc653ae1b18663459dfd4a10d5c5a723fc984765fd4dd3b00d1 git-sources-2.6.24_rc2-r1.ebuild 1117
-EBUILD git-sources-2.6.24_rc2-r3.ebuild 1117 RMD160 d3a7ed4c50283f493004ee4831dbbd1e7925e80e SHA1 b724fa7d0a3ef2aef6d7b60c52d730d4c1559c11 SHA256 75d4363c1f4b3dc653ae1b18663459dfd4a10d5c5a723fc984765fd4dd3b00d1
-MD5 5390336076be0bcb2731adf149f22ace git-sources-2.6.24_rc2-r3.ebuild 1117
-RMD160 d3a7ed4c50283f493004ee4831dbbd1e7925e80e git-sources-2.6.24_rc2-r3.ebuild 1117
-SHA256 75d4363c1f4b3dc653ae1b18663459dfd4a10d5c5a723fc984765fd4dd3b00d1 git-sources-2.6.24_rc2-r3.ebuild 1117
-MISC ChangeLog 23165 RMD160 b1a26847d2bad4a680819574b90f07dc988fbe22 SHA1 108c0993847242a796c023eb31523bcd90e7259b SHA256 bd16d3bbd27bab6a3b87e49d96b5aa7d098615a6a1366867516b6a6b9e2370d1
-MD5 170d35a18acc1d98643e08d25dab4a94 ChangeLog 23165
-RMD160 b1a26847d2bad4a680819574b90f07dc988fbe22 ChangeLog 23165
-SHA256 bd16d3bbd27bab6a3b87e49d96b5aa7d098615a6a1366867516b6a6b9e2370d1 ChangeLog 23165
+EBUILD git-sources-2.6.24_rc1-r10.ebuild 1235 RMD160 b3ac23ae1f674f8135d2758575415986a096ce63 SHA1 321c9fc5f946b3770ebb133eb943774fadd4b7ee SHA256 6652ef33565ab6ae87f81c645c38a8295645e2980e35a288080a9229dfc0acf0
+MD5 e1de5a626ce52c2159a1022aeff6d0ef git-sources-2.6.24_rc1-r10.ebuild 1235
+RMD160 b3ac23ae1f674f8135d2758575415986a096ce63 git-sources-2.6.24_rc1-r10.ebuild 1235
+SHA256 6652ef33565ab6ae87f81c645c38a8295645e2980e35a288080a9229dfc0acf0 git-sources-2.6.24_rc1-r10.ebuild 1235
+EBUILD git-sources-2.6.24_rc1-r15.ebuild 1235 RMD160 9a51bff952274e787edc742813f314cbc765f1c0 SHA1 982d5731f0dfb6758e9e1b1d8ff3efb653172bf0 SHA256 95ecfb43705c6f841e69531d1db1bcbc46e8c2b80e88aaf7563a86cf6bc06e6d
+MD5 310570c6a3b4ec5fc1fd4dd6aeeae72c git-sources-2.6.24_rc1-r15.ebuild 1235
+RMD160 9a51bff952274e787edc742813f314cbc765f1c0 git-sources-2.6.24_rc1-r15.ebuild 1235
+SHA256 95ecfb43705c6f841e69531d1db1bcbc46e8c2b80e88aaf7563a86cf6bc06e6d git-sources-2.6.24_rc1-r15.ebuild 1235
+EBUILD git-sources-2.6.24_rc2-r1.ebuild 1234 RMD160 332f65137af9662731076a3209bdedde13cfd0d4 SHA1 9c06c207f277a18289d4911312104080879b09a9 SHA256 d5bda60a8c7f59891c75d6a49cda01e28dbec6322793a388d3968f39d490a381
+MD5 cc887a5d46e111215a4f7b9c72cfe7e4 git-sources-2.6.24_rc2-r1.ebuild 1234
+RMD160 332f65137af9662731076a3209bdedde13cfd0d4 git-sources-2.6.24_rc2-r1.ebuild 1234
+SHA256 d5bda60a8c7f59891c75d6a49cda01e28dbec6322793a388d3968f39d490a381 git-sources-2.6.24_rc2-r1.ebuild 1234
+EBUILD git-sources-2.6.24_rc2-r3.ebuild 1234 RMD160 fa61a5fb74ada29b4843bdb55d1f020d48d1ae96 SHA1 4c35511dcf303b4147313fd03cd115973d5f22c0 SHA256 cf0fa3e08e25f33d4ffb645e0c5e31eece5b1576a88436729f7ec1b2f9c37a73
+MD5 fdda7cb35dcd0a2a38a321e747345e83 git-sources-2.6.24_rc2-r3.ebuild 1234
+RMD160 fa61a5fb74ada29b4843bdb55d1f020d48d1ae96 git-sources-2.6.24_rc2-r3.ebuild 1234
+SHA256 cf0fa3e08e25f33d4ffb645e0c5e31eece5b1576a88436729f7ec1b2f9c37a73 git-sources-2.6.24_rc2-r3.ebuild 1234
+MISC ChangeLog 23483 RMD160 7173925cf1d83b7b49b5e4096cb38aecb2895bde SHA1 35339c16ff7e7daa347cacad27dfd9951f7065f6 SHA256 b3c62d645a4162cc2d060884b5f88b664a5c5c107e41039f28edb11870c72349
+MD5 a532d00972debdbfe5fca1cf2c7447f4 ChangeLog 23483
+RMD160 7173925cf1d83b7b49b5e4096cb38aecb2895bde ChangeLog 23483
+SHA256 b3c62d645a4162cc2d060884b5f88b664a5c5c107e41039f28edb11870c72349 ChangeLog 23483
 MISC metadata.xml 449 RMD160 d294fadd32041f41f221d9c50a04cba964d56d2a SHA1 23042103b1ded51439d907767fe19fbde8834cf6 SHA256 5ba3a4038eb9f870f3fcc1d67c223efda046210a313bd4c0ffff7fb382e7e2d0
 MD5 8ca405b8c53bdbeb5e1c6e981420b315 metadata.xml 449
 RMD160 d294fadd32041f41f221d9c50a04cba964d56d2a metadata.xml 449
